erDiagram
    suppliers ||--o{ fabric_collections : "has many"
    suppliers ||--o{ reports : "supplies fabric for"
    fabric_collections ||--o{ reports : "used in"
    reports ||--o{ report_answers : "has many"
    
    suppliers {
        INTEGER id PK "Auto-increment"
        TEXT name "Supplier name"
        TEXT type "Mill, Atelier, or Logistics"
        TEXT country "Country of operation"
        TEXT mill_location "Specific location"
        REAL lat "Latitude coordinate"
        REAL lng "Longitude coordinate"
        BOOLEAN woolmark_certified "Woolmark certification status"
        BOOLEAN rws_certified "RWS certification status"
        TEXT sustainability_data "JSON pillar answers"
    }
    
    fabric_collections {
        INTEGER id PK "Auto-increment"
        INTEGER supplier_id FK "References suppliers(id)"
        TEXT bunch_name "Collection/bunch name"
        TEXT season "e.g., AW 2025"
    }
    
    reports {
        TEXT id PK "UUID"
        TEXT shopify_order_id "Shopify order ID"
        TEXT shopify_line_item_id "Specific line item"
        TEXT shopify_customer_id "Customer ID"
        TEXT customer_name "Customer display name"
        TEXT suit_id "Format: KAD-YEAR-ORDER"
        TEXT item_name "Product name"
        INTEGER mill_id FK "References suppliers(id)"
        INTEGER collection_id FK "References fabric_collections(id)"
        TEXT article_code "Fabric article code"
        TEXT composition "e.g., 100% Wool, Silk"
        INTEGER score_fibre "Pillar 1 score (0-25)"
        INTEGER score_traceability "Pillar 2 score (0-25)"
        INTEGER score_labour "Pillar 3 score (0-25)"
        INTEGER score_climate "Pillar 4 score (0-25)"
        INTEGER total_score "Total score (0-100)"
        TEXT emissions "JSON emissions data"
        TEXT pdf_r2_key "R2 storage key"
        TEXT pdf_public_url "Public PDF URL"
        DATETIME created_at "Timestamp"
    }
    
    report_answers {
        TEXT report_id FK "References reports(id)"
        TEXT question_id "Question identifier"
        TEXT answer_value "Answer value"
        INTEGER points_awarded "Points for this answer"
    }
    
    sessions {
        TEXT id PK "Session ID"
        TEXT shop "Shopify shop domain"
        TEXT state "OAuth state"
        INTEGER isOnline "Online session flag"
        TEXT scope "OAuth scopes"
        INTEGER expires "Expiration timestamp"
        TEXT accessToken "Shopify access token"
        BIGINT userId "Shopify user ID"
    }
